Initial data refining and favicon!

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # site settings
 title: Vaibhav Shinde
-subtitle: Developer
+subtitle: DEV
 email: vaibhavkshinde20@gmail.com
 description: A Work-In Progress Portfolio Page
 baseurl: 
