Fixed major initial issues

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: vaibhavkshinde20@gmail.com
 description: A Work-In Progress Portfolio Page
 baseurl: 
 url: 'https://vaibks.github.io' # the base hostname & protocol for your site
-author:
+author: Vaibhav Shinde
 street_address: 
 city: Pune
 state: Maharashtra
